WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109871
[Chromium] REGRESSION: Closed Captions button not showing properly
https://bugs.webkit.org/show_bug.cgi?id=109871
Summary
[Chromium] REGRESSION: Closed Captions button not showing properly
Victor Carbune
Reported
2013-02-14 15:59:47 PST
I'm not sure when this actually broke, but the CC button isn't displayed anymore, though the button exists there (probably the resource isn't painted for some reason?) It might not be Chromium specific, so if it happens on other ports I'll rename it. The two pixel tests that would have caught this were marked as requiring new baselines after
webkit.org/b/97800
(but this clearly isn't the cause of the bug)
Attachments
Screenshot
(6.90 KB, image/png)
2013-02-14 16:03 PST
,
Victor Carbune
no flags
Details
get Linux testexpectations
(6.24 KB, patch)
2013-02-18 17:08 PST
,
Silvia Pfeiffer
no flags
Details
Formatted Diff
Diff
Patch
(6.20 KB, patch)
2013-02-25 20:05 PST
,
Silvia Pfeiffer
no flags
Details
Formatted Diff
Diff
remainder patch
(2.49 KB, patch)
2013-03-10 21:33 PDT
,
Silvia Pfeiffer
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Victor Carbune
Comment 1
2013-02-14 16:03:49 PST
Created
attachment 188444
[details]
Screenshot
Christian Biesinger
Comment 2
2013-02-15 12:18:36 PST
The two tests are LayoutTests/media/track/track-cue-rendering-horizontal.html LayoutTests/media/track/track-cue-rendering-vertical.html I tried to look at them in my Chromium browser, but I can't get any CC-related things to show up (not even the button that doesn't quite display). Am I doing it wrong?
Christian Biesinger
Comment 3
2013-02-15 13:37:19 PST
Oh, figured it out. Need to load this via SimpleHTTPServer to work.
Silvia Pfeiffer
Comment 4
2013-02-18 16:23:43 PST
I have a patch coming up for this (preparing test expectations now) - I honestly have no idea how that button ever showed up! ;-)
Silvia Pfeiffer
Comment 5
2013-02-18 17:08:57 PST
Created
attachment 188965
[details]
get Linux testexpectations
WebKit Review Bot
Comment 6
2013-02-18 17:49:51 PST
Comment on
attachment 188965
[details]
get Linux testexpectations
Attachment 188965
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/16615432
New failing tests: media/track/track-cue-rendering-horizontal.html media/track/track-cue-rendering-vertical.html
Christian Biesinger
Comment 7
2013-02-22 16:41:50 PST
Hm... should the new .pngs be in that diff too?
Silvia Pfeiffer
Comment 8
2013-02-22 21:43:27 PST
This is a regression - the images for the caption button have been committed before.
Christian Biesinger
Comment 9
2013-02-25 12:01:38 PST
Well
bug 109775
regenerated those PNGs (because the time slider is now slightly different), so the PNGs do need to be regenerated... this is why the cr-linux bot is red for this patch.
Silvia Pfeiffer
Comment 10
2013-02-25 14:32:05 PST
Oh, the test expectations! Sure! I was expecting them to be attached to the bot failure report. (They used to be.) Gotta create them differently now. This wasn't for landing!
Christian Biesinger
Comment 11
2013-02-25 14:43:59 PST
Oh! Heh. Sorry for being unclear!
Silvia Pfeiffer
Comment 12
2013-02-25 20:05:20 PST
Created
attachment 190191
[details]
Patch
Silvia Pfeiffer
Comment 13
2013-02-25 20:10:08 PST
Note: checked the images on mountain lion - need to create rebaseline test expectation images after landing
Silvia Pfeiffer
Comment 14
2013-03-02 00:53:57 PST
review ping?
Silvia Pfeiffer
Comment 15
2013-03-10 21:33:13 PDT
Created
attachment 192402
[details]
remainder patch
WebKit Review Bot
Comment 16
2013-03-10 22:00:30 PDT
Comment on
attachment 192402
[details]
remainder patch Rejecting
attachment 192402
[details]
from commit-queue.
silviapf@chromium.org
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
Silvia Pfeiffer
Comment 17
2013-03-10 22:49:05 PDT
Comment on
attachment 192402
[details]
remainder patch Just landed my committer rights, trying to land again.
WebKit Review Bot
Comment 18
2013-03-10 22:49:13 PDT
Comment on
attachment 192402
[details]
remainder patch Rejecting
attachment 192402
[details]
from commit-queue.
silviapf@chromium.org
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
Build Bot
Comment 19
2013-03-11 01:18:08 PDT
Comment on
attachment 192402
[details]
remainder patch
Attachment 192402
[details]
did not pass mac-ews (mac): Output:
http://webkit-commit-queue.appspot.com/results/17121076
New failing tests: editing/selection/selection-modify-crash.html
Silvia Pfeiffer
Comment 20
2013-03-11 01:54:43 PDT
Comment on
attachment 192402
[details]
remainder patch Try again - hopefully I'm now in the committers.py file.
WebKit Review Bot
Comment 21
2013-03-11 02:42:17 PDT
Comment on
attachment 192402
[details]
remainder patch Clearing flags on attachment: 192402 Committed
r145347
: <
http://trac.webkit.org/changeset/145347
>
WebKit Review Bot
Comment 22
2013-03-11 02:42:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug