[Chromium] REGRESSION: Closed Captions button not showing properly https://bugs.webkit.org/show_bug.cgi?id=109871

Reviewed by Jer Noble.

No new tests - covered by existing tests.

Most of the patch was in the meantime covered by a patch to
https://bugs.webkit.org/show_bug.cgi?id=111109 .
This changes a static Chromium-only function name to be consistent with
parent class function names.

* rendering/RenderMediaControlsChromium.cpp:
(WebCore::paintMediaToggleClosedCaptionsButton):
(WebCore::RenderMediaControlsChromium::paintMediaControlsPart):
Rename paintMediaClosedCaptionsButton to paintMediaToggleClosedCaptionsButton.


Canonical link: https://commits.webkit.org/130307@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145347 268f45cc-cd09-0410-ab3c-d52691b4dbfc